--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-APP_NAME=Laravel
+APP_NAME=Client-Funnel
 APP_ENV=local
 APP_KEY=base64:RknT72aahjKjwomXfpJswc4WK9TXDs4tIcM3SBM/16o=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
