change user name

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Client-Funnel
+APP_NAME=Silko-Funnel
 APP_ENV=local
 APP_KEY=base64:RknT72aahjKjwomXfpJswc4WK9TXDs4tIcM3SBM/16o=
 APP_DEBUG=true
